syntax="proto3";
package com.yude.game.doudizhu.application.response;
option java_outer_classname = "MatchFinishResponse$$ByJProtobuf";
message MatchFinishResponse {  
 sint64 roomId=1;
repeated SeatInfoDTO seatInfoDTOList=2;
}
message SeatInfoDTO {  
 sint32 posId=1;
 PlayerDTO playerDTO=2;
repeated sint32 handCards=3;
 sint32 callScore=4;
 sint32 redouble=5;
repeated CardDTO outCardTips=6;
}
message PlayerDTO {  
 sint64 userId=1;
 string name=2;
 string headUrl=3;
 sint64 score=4;
}
message CardDTO {  
repeated sint32 cards=1;
 sint32 cardType=2;
}
